Getting frontend working with partials and test front end functionality using view models

--- a/WebApp/Views/Shared/Partials/Modals/_AddProjectModalPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/Modals/_AddProjectModalPartial.cshtml
@@ -1,7 +1,4 @@
-﻿
-@{
-}
-
+﻿@model AddProjectViewModel
 <section>
     <div id="projectModal" class="_modal">
         <div class="_modal-content">
