--- a/WebApp/Views/Shared/Partials/Modals/_EditProjectModalPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/Modals/_EditProjectModalPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-}
-
+﻿@model EditProjectViewModel
 <section>
     <div id="editProjectModal" class="_modal">
         <div class="_modal-content">
