--- a/WebApp/Views/Admin/Index.cshtml
+++ b/WebApp/Views/Admin/Index.cshtml
@@ -1,11 +1,9 @@
-﻿
+﻿@model ProjectsViewModel
 @{
     ViewData["Title"] = "Projects";
 }
 
-
 <main class="main">
-
     <div class="page-header">
         <h1>Projects</h1>
         <button class="add-button" data-modal="true" data-target="#projectModal">
@@ -13,56 +11,23 @@
             Add Project
         </button>
     </div>
-
     <div class="project-table">
         <div class="tabs">
             <a href="#" class="tab-link">ALL [ 9 ]</a>
             <a href="#" class="tab-link">STARTED [ 5 ]</a>
             <a href="#" class="tab-link">COMPLETED [ 4 ]</a>
         </div>
-
         <div class="card-container">
-            <div class="cards">
-
-                <div class="project-card">
-                    <div class="card-flex">
-
-                        <div class="card-left">
-                            <div class="card-icon">
-                                <img src="/images/dev-icon1.svg" alt="Project Icon" />
-                            </div>
-                            <div class="card-headers">
-                                <h5>Website Redesign</h5>
-                                <h6>GitLab Inc.</h6>
-                            </div>
-                        </div>
-
-                        <div class="dots-icon">
-                            <i class="bi bi-three-dots" data-popup="true"></i>
-                        </div>
-                    </div>
-
-                    <!-- Edit and Delete Popup -->
-                    <div class="dots-popup">
-                        <div class="dot-btn">
-                            <i class="bi bi-pencil"></i>
-                            <button class="edit" data-modal="true" data-target="#editProjectModal">Edit</button>
-                        </div>
-                        <div class="dot-btn">
-                            <i class="bi bi-trash"></i>
-                            <button class="delete">Delete Project</button>
-                        </div>
-                    </div>
-
-                    <p class="card-text">It is necessary to develop a website redesign in a corporate style.</p>
-                </div>
-
-
-            </div>
+            @if(Model.Projects != null && Model.Projects.Any())
+            {
+                @foreach (var project in Model.Projects)
+                {
+                    @await Html.PartialAsync("Partials/ProjectMain/_ProjectCardItemPartial", project)
+                }
+            }
         </div>
-
     </div>
 </main>
 
-@await Html.PartialAsync("Partials/Modals/_AddProjectModalPartial")
-@await Html.PartialAsync("Partials/Modals/_EditProjectModalPartial")
+@await Html.PartialAsync("Partials/Modals/_AddProjectModalPartial", Model.AddProjectFormData)
+@await Html.PartialAsync("Partials/Modals/_EditProjectModalPartial", Model.EditProjectFormData)
