--- a/WebApp/Views/Account/LogIn.cshtml
+++ b/WebApp/Views/Account/LogIn.cshtml
@@ -1,45 +1,36 @@
-﻿
+﻿@model LogInViewModel
 @{
     Layout = "_Layout_Forms";
-    ViewData["Title"] = "Sign In";
+    ViewData["Title"] = "LogIn";
 }
 <div class="surface">
     <div class="form-group">
-
-        <form class="reg-form space-y-1" novalidate>
-
+        <form method="post" asp-controller="Account" asp-action="LogIn" class="reg-form space-y-1" novalidate>
             <div class="form-heading">
                 <h1>Login</h1>
             </div>
-
             <div class="input-group">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" placeholder="Your email address" id="email" name="email" class="form-input" required>
-                <p class="invalid-input" style="display: none;">You need to enter a valid email address</p>
+                <label asp-for="Email" class="form-label"></label>
+                <input class="form-input" asp-for="Email">
+                <span asp-validation-for="Email"></span>
             </div>
-
             <div class="input-group">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" placeholder="Enter your password" id="password" name="password" class="form-input" required>
-                <p class="invalid-input" style="display: none;">You need to enter a valid password</p>
+                <label asp-for="Password" class="form-label"></label>
+                <input class="form-input" asp-for="Password">
+                <span asp-validation-for="Password"></span>
             </div>
-
             <div class="input-group">
                 <div class="custom-check">
-                    <input class="form-check-box" type="checkbox" id="remember">
-                    <label for="remember">Remember Me</label>
+                    <input asp-for="RememberMe" class="form-check-box">
+                    <label asp-for="RememberMe">Remember me</label>
                 </div>
             </div>
-
             <button type="submit" class="_btn-custom _btn-blue">Log In</button>
-
         </form>
-
     </div>
-
     <footer class="form-footer">
         <div class="flex-end">
-            <p>Don't have an account? <a href="#" class="h-links">Sign Up</a></p>
+            <p>Don't have an account? <a asp-controller="Account" asp-action="SignUp" class="h-links">Sign Up</a></p>
         </div>
     </footer>
-    </div>
+</div>
