--- a/WebApp/Views/Account/SignUp.cshtml
+++ b/WebApp/Views/Account/SignUp.cshtml
@@ -4,7 +4,6 @@
     Layout = "_Layout_Forms";
     ViewData["Title"] = "Create Account";
 }
-<div class="center-screen">
     <div class="surface">
         <div class="form-group">
             <form method="post" asp-controller="Account" asp-action="SignUp" class="reg-form space-y-1" novalidate>
@@ -12,28 +11,28 @@
                     <h1>Create Account</h1>
                 </div>
                 <div class="input-group">
-                    <label asp-for="FullName" class="form-label">Full Name</label>
-                    <input class="form-input" asp-for="FullName"  id="fullName">
+                    <label asp-for="FullName" class="form-label"></label>
+                    <input class="form-input" asp-for="FullName">
                     <span asp-validation-for="FullName"></span>
                 </div>
                 <div class="input-group">
-                    <label asp-for="Email" class="form-label">Email</label>
-                    <input class="form-input" asp-for="Email" id="email" >
+                    <label asp-for="Email" class="form-label"></label>
+                    <input class="form-input" asp-for="Email">
                     <span asp-validation-for="Email"></span>
                 </div>
                 <div class="input-group">
-                    <label asp-for="Password" class="form-label">Password</label>
-                    <input class="form-input" asp-for="Password" id="password">
+                    <label asp-for="Password" class="form-label"></label>
+                    <input class="form-input" asp-for="Password" value="@Model.Password">
                     <span asp-validation-for="Password"></span>
                 </div>
                 <div class="input-group">
-                    <label asp-for="ConfirmPassword" class="form-label">Confirm Password</label>
-                    <input class="form-input" asp-for="ConfirmPassword" id="confirmPassword">
+                    <label asp-for="ConfirmPassword" class="form-label"></label>
+                    <input class="form-input" asp-for="ConfirmPassword">
                     <span asp-validation-for="ConfirmPassword"></span>
                 </div>
                 <div class="input-group">
                     <div class="custom-check">
-                        <input asp-for="Terms" class="form-check-box" id="terms">
+                        <input asp-for="Terms" class="form-check-box">
                         <label asp-for="Terms">I accept the <a href="#" class="h-links">Terms and Conditions</a></label>
                     </div>
                 </div>
@@ -46,4 +45,3 @@
             </div>
         </footer>
     </div>
-</div>
