--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -787,6 +787,12 @@ font-size: 1.25rem;
         gap: 1rem;
     }
 
+.input-group.dates .date-field {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
     ._modal-content .date-input {
         width: 220px;
     }
