--- a/WebApp/Views/Shared/Partials/ProjectMain/_ProjectCardItemPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/ProjectMain/_ProjectCardItemPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="card-flex">
         <div class="card-left">
             <div class="card-icon">
-                <img src="/images/dev-icon1.svg" alt="Project Icon" />
+                <img src="~/images/dev-icon1.svg" alt="Project Icon" />
             </div>
             <div class="card-headers">
                 <h5>@Model.ProjectName</h5>
