--- a/WebApp/Views/Shared/Partials/Side/_AlphaLogotype.cshtml
+++ b/WebApp/Views/Shared/Partials/Side/_AlphaLogotype.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="logotype">
     <a class="alpha-logotype" href="@Url.Content("~/")">
-        <img src="images/alpha-logo.svg" alt="Aplha Portal">
+        <img src="~/images/alpha-logo.svg" alt="Aplha Portal">
         <span>alpha</span>
     </a>
 </div>
