--- a/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPartial.cshtml
@@ -7,6 +7,6 @@
 </div>
 <div class="separator"></div>
     <div class="avatar-img">
-        <img src="images/avatar-male1.svg" alt="User avatar">
+        <img src="~/images/avatar-male1.svg" alt="User avatar">
     @await Html.PartialAsync("Partials/Top/Settings/_SettingsPopupPartial")
 </div>
