--- a/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPopupPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPopupPartial.cshtml
@@ -4,7 +4,7 @@
 
 <div class="settings-popup">
     <div class="user-img">
-        <img src="images/avatar-male1.svg" alt="User Avatar">
+        <img src="~/images/avatar-male1.svg" alt="User Avatar">
         <span class="user-name">Tim Larsson</span>
     </div>
     <div class="logout-btn">
