--- a/WebApp/Views/Shared/Partials/Modals/_AddProjectModalPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/Modals/_AddProjectModalPartial.cshtml
@@ -9,9 +9,9 @@
             <div class="_modal-img">
                 <img src="/images/dev-icon1.svg" alt="Project Icon" />
             </div>
-            <form method="post" asp-controller="Admin" asp-action="Index" class="_form-modal space-y-1" novalidate>
+            <form method="post" asp-controller="Admin" asp-action="AddProject" class="_form-modal space-y-1" novalidate>
                 <div class="input-group">
-                    <label asp-for="ProjectName" class="form-label"></label>
+                    <label asp-for="ProjectName" class="form-label">Project Name</label>
                     <input type="text" asp-for="ProjectName"  class="form-input">
                     <span asp-validation-for="ProjectName"></span>
                 </div>
@@ -19,9 +19,10 @@
                     <label asp-for="ClientId" class="form-label">Client Name</label>
                     <select asp-for="ClientId" class="form-input">
                         <option value="">Choose client...</option>
-                        <option value="1">GitLab Inc.</option>
-                        <option value="2">Google</option>
-                        <option value="3">Slack Technologies</option>
+                        @foreach (var client in Model.Clients)
+                        {
+                            <option value="@client.Value">@client.Text</option>
+                        }
                     </select>
                     <span asp-validation-for="ClientId"></span>
                 </div>
