Added login functionality using SignInManager. Validated login data and displays error messages in ViewBag. Redirected successful logins to the project view. Also replaced hardcoded username with dynamic display using SignInManager, and implemented sign-out functionality that redirects to the login page.

--- a/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPopupPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPopupPartial.cshtml
@@ -1,14 +1,22 @@
-﻿
-@{
+﻿@using Data.Entities
+@using Microsoft.AspNetCore.Identity
+@inject UserManager<UserEntity> userManager
+@inject SignInManager<UserEntity> signInManager
+
+@if (signInManager.IsSignedIn(User))
+{
+    var user = await userManager.GetUserAsync(User);
+
+    <div class="settings-popup">
+        <div class="user-img">
+            <img src="~/images/avatar-male1.svg" alt="User Avatar">
+            <span class="user-name">@user?.FullName</span>
+        </div>
+
+        <div class="logout-btn">
+            <i class="fa-sharp fa-solid fa-arrow-right-from-bracket"></i>
+            <a asp-controller="Account" asp-action="SignOut" class="logout">Logout</a>
+        </div>
+    </div>
 }
 
-<div class="settings-popup">
-    <div class="user-img">
-        <img src="~/images/avatar-male1.svg" alt="User Avatar">
-        <span class="user-name">Tim Larsson</span>
-    </div>
-    <div class="logout-btn">
-        <i class="fa-sharp fa-solid fa-arrow-right-from-bracket"></i>
-        <button class="logout">Logout</button>
-    </div>
-</div>
