--- a/WebApp/Views/Account/LogIn.cshtml
+++ b/WebApp/Views/Account/LogIn.cshtml
@@ -9,6 +9,13 @@
             <div class="form-heading">
                 <h1>Login</h1>
             </div>
+
+            @if (ViewBag.ErrorMessage != null)
+            {
+                <div class="alert alert-danger">
+                    @ViewBag.ErrorMessage
+                </div>
+            }
             <div class="input-group">
                 <label asp-for="Email" class="form-label"></label>
                 <input class="form-input" asp-for="Email">
