Implemented edit modal functionality with form validation. Changes are saved to the database via EditProject method in controller. Fixed status filtering (All, Started, Completed) on the frontend.

--- a/WebApp/Views/Admin/Index.cshtml
+++ b/WebApp/Views/Admin/Index.cshtml
@@ -14,9 +14,9 @@
     </div>
     <div class="project-table">
         <div class="tabs">
-            <a href="#" class="tab-link">ALL [ 9 ]</a>
-            <a href="#" class="tab-link">STARTED [ 5 ]</a>
-            <a href="#" class="tab-link">COMPLETED [ 4 ]</a>
+            <a href="#" class="tab-link" data-filter="all">ALL [ @Model.AllCount ]</a>
+            <a href="#" class="tab-link" data-filter="started">STARTED [ @Model.StartedCount ]</a>
+            <a href="#" class="tab-link" data-filter="completed">COMPLETED [ @Model.CompletedCount ]</a>
         </div>
         <div class="card-container">
             @if(Model.Projects != null && Model.Projects.Any())
