--- a/WebApp/Views/Shared/_Layout_Forms.cshtml
+++ b/WebApp/Views/Shared/_Layout_Forms.cshtml
@@ -19,8 +19,10 @@
         </main>
     </div>
 
+    @await Html.PartialAsync("Partials/_CookieConsentPartial")
 
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/cookie-consent.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
