--- a/WebApp/Views/Shared/Partials/_CookieConsentPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/_CookieConsentPartial.cshtml
@@ -57,7 +57,7 @@
                 </div>
             </div>
 
-            <div class="mt-3">
+            <div class="mt-3 cookie-buttons">
                 <button type="button" class="btn btn-success btn-sm" onclick="acceptAllCookies()">Accept all</button>
                 <button type="button" class="btn btn-secondary btn-sm me-2" onclick="saveSelectedCookies()">Save selected settings</button>
             </div>
