--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -773,6 +773,16 @@ font-size: 1.25rem;
     cursor: pointer;
 }
 
+    .image-preview-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+.hide {
+    display: none;
+}
+
 
 .circle {
     position: absolute;
@@ -860,22 +870,22 @@ font-size: 1.25rem;
     }
 
 /*Cookie Consent Modal*/
-/*Styling taken from Hans cookie consent video*/
+/*Styling taken from Hans cookie consent video and some modifications done*/
 
 #cookieModal {
+    display: none;
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #0000009d;
-    display: none;
+    background-color: rgba(0, 0, 0, 0.3);
     align-items: center;
     justify-content: center;
     z-index: 9998;
 }
 
-    #cookieModal .card {
+    #cookieModal .cookie-card {
         width: 50%;
         display: grid;
         grid-template-columns: 5fr 3fr;
@@ -888,7 +898,7 @@ font-size: 1.25rem;
             padding: 3rem 5rem;
         }
 
-        #cookieModal .card h3 {
+        #cookieModal .cookie-card h3 {
             margin-bottom: 3rem;
             font-weight: 300;
         }
@@ -898,25 +908,32 @@ font-size: 1.25rem;
     }
 
 
-.settings {
+.cookie-settings {
     background-color: #ffdb00;
     padding: 3rem 2rem;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
 
-    .settings .buttons {
+.cookie-card .content {
+    background-color: #fff;
+    padding: 3rem 5rem;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+    .cookie-settings .buttons {
         display: grid;
         gap: 1rem;
         margin-top: 1rem;
     }
 
-    .settings .options {
+    .cookie-settings .options {
         display: grid;
         gap: 1.5rem;
     }
 
-        .settings .options .option {
+        .cookie-settings .options .option {
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -926,7 +943,7 @@ font-size: 1.25rem;
             font-size: 1.1em;
         }
 
-        .settings .options .switch-label {
+        .cookie-settings .options .switch-label {
             cursor: pointer;
             display: flex;
             align-items: center;
@@ -955,6 +972,13 @@ font-size: 1.25rem;
 .btn-dark-outline {
     border-color: #000000c1;
     color: #000000c1;
+}
+
+
+.cookie-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 
@@ -995,6 +1019,16 @@ font-size: 1.25rem;
         transition: .4s;
     }
 
+.switch input:disabled + .slider {
+    background-color: #000000c1;
+    cursor: not-allowed;
+}
+
+    .switch input:disabled + .slider:before {
+        transform: translateX(27px);
+        background-color: #ffffff;
+    }
+
 input:focus + .slider {
     box-shadow: 0 0 1px #ffffff;
 }
@@ -1004,7 +1038,7 @@ input:checked + .slider {
 }
 
     input:checked + .slider:before {
-        transform: translateX(26px);
+        transform: translateX(15px);
     }
 
 
