--- a/WebApp/Views/Shared/Partials/_CookieConsentPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/_CookieConsentPartial.cshtml
@@ -26,7 +26,7 @@
                 <div class="option">
                     <label class="switch-label" for="cookiePreferences">
                         <i class="fa-solid fa-chevron-down"></i>
-                        Preferences (e.g., language settings)
+                        Preferences
                     </label>
                     <label class="switch">
                         <input type="checkbox" id="cookiePreferences" name="preferences" />
@@ -37,7 +37,7 @@
                 <div class="option">
                     <label class="switch-label" for="cookieStatistics">
                         <i class="fa-solid fa-chevron-down"></i>
-                        Statistics (site usage & performance)
+                        Statistics  
                     </label>
                     <label class="switch">
                         <input type="checkbox" id="cookieStatistics" name="statistics" />
@@ -48,7 +48,7 @@
                 <div class="option">
                     <label class="switch-label" for="cookieMarketing">
                         <i class="fa-solid fa-chevron-down"></i>
-                        Marketing (personalized ads & tracking)
+                        Marketing
                     </label>
                     <label class="switch">
                         <input type="checkbox" id="cookieMarketing" name="marketing" />
@@ -58,13 +58,13 @@
             </div>
 
             <div class="mt-3 cookie-buttons">
-                <button type="button" class="btn btn-success btn-sm" onclick="acceptAllCookies()">Accept all</button>
-                <button type="button" class="btn btn-secondary btn-sm me-2" onclick="saveSelectedCookies()">Save selected settings</button>
+                <button type="button" class="btn btn-success btn-sm" onclick="acceptAll()">Accept all</button>
+                <button type="button" class="btn btn-secondary btn-sm me-2" onclick="acceptSelected()">Save selected settings</button>
             </div>
         </form>
     </div>
 </div>
 
-<div class="cookieConsentIcon" onclick="openCookieConsentBanner()">
+<div class="cookieConsentIcon" onclick="showCookieModal()">
     <i class="fa-solid fa-cookie-bite"></i>
 </div>
