--- a/WebApp/Views/Shared/Partials/ProjectMain/_ProjectCardItemPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/ProjectMain/_ProjectCardItemPartial.cshtml
@@ -18,10 +18,10 @@
                 <i class="bi bi-three-dots" data-popup="true"></i>
             </div>
         </div>
-
-        <!-- Edit and Delete Popup -->
-        <div class="dots-popup">
-            <div class="dot-btn">
+        @if (User.IsInRole("Admin"))
+            {
+            <div class="dots-popup">
+                <div class="dot-btn">
                 <i class="bi bi-pencil"></i>
                 <button class="edit" data-modal="true" data-target="#editProjectModal" data-id="@Model.Id">Edit</button>
             </div>
@@ -29,8 +29,9 @@
                 <i class="bi bi-trash"></i>
                 <a class="delete" asp-controller="Admin" asp-action="DeleteProject"
                    asp-route-id="@Model.Id" onclick="return confirm('Are you sure?')">Delete</a>
+                </div>
             </div>
-        </div>
+            }
         <p class="card-text">@Model.Description</p>
     </div>
 </div>
