--- a/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPopupPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPopupPartial.cshtml
@@ -11,6 +11,7 @@
         <div class="user-img">
             <img src="~/images/avatar-male1.svg" alt="User Avatar">
             <span class="user-name">@user?.FullName</span>
+            @* Lägg till om man är Admin eller User här *@
         </div>
 
         <div class="logout-btn">
