--- a/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPopupPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/Top/Settings/_SettingsPopupPartial.cshtml
@@ -6,18 +6,25 @@
 @if (signInManager.IsSignedIn(User))
 {
     var user = await userManager.GetUserAsync(User);
+    if (user != null)
+    {
+        var roles = await userManager.GetRolesAsync(user);
+        var userRole = roles.FirstOrDefault() ?? "No role";
 
-    <div class="settings-popup">
-        <div class="user-img">
-            <img src="~/images/avatar-male1.svg" alt="User Avatar">
-            <span class="user-name">@user?.FullName</span>
-            @* Lägg till om man är Admin eller User här *@
-        </div>
+        <div class="settings-popup">
+            <div class="user-img">
+                <img src="~/images/avatar-male1.svg" alt="User Avatar">
+                <span class="user-name">@user?.FullName</span>
+                @if(userRole == "Admin")
+                {
+                    <span class="user-name">[ @userRole ]</span>
+                }
+            </div>
 
         <div class="logout-btn">
             <i class="fa-sharp fa-solid fa-arrow-right-from-bracket"></i>
             <a asp-controller="Account" asp-action="SignOut" class="logout">Logout</a>
         </div>
     </div>
+    }
 }
-
